Repo styles better and overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,6 @@ body
 	font-size: 2em;
 }
 
-*
-{
-	max-width: 100vw;
-}
-
 nav
 {
 	width: 100%;
@@ -60,10 +55,15 @@ header
 	text-align: center;
 }
 
+.center *
+{
+	align-self: center;
+}
+
 .screenCover
 {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	padding: 10vh 0 0;
 }
 
@@ -98,9 +98,9 @@ header
 {
 	background-color: #BBB;
 	border-radius: 0.2em;
-	padding: 0.2em 5%;
-	margin: 0 5%;
-	width: 20%;
+	padding: .2em 5%;
+	margin: 0 .2em;
+	min-width: 50%;
 	height: 100%;
 }
 
@@ -121,6 +121,7 @@ body, #navLinks a, .gray, .grey, .colorGray, .colorGrey
 
 .content
 {
+	width: 100%;
 	font-size: .7em;
 	margin: 5px 0;
 }
@@ -171,7 +172,7 @@ body, #navLinks a, .gray, .grey, .colorGray, .colorGrey
 
 #firstView
 {
-	padding: 10.5vh 20px .5vh;
+	padding: 10.5vh 0 .5vh;
 }
 
 #nameHeading
@@ -194,15 +195,18 @@ body, #navLinks a, .gray, .grey, .colorGray, .colorGrey
 
 #repoList
 {
+	min-width: 100%;
 	overflow: hidden;
 	overflow-x: auto;
 }
 
 #footer
 {
-	width: 100vw;
+	width: 100%;
 	height: auto;
 	min-height: 10vh;
+	padding-left: 0;
+	padding-right: 0;
 	background: #C8C8C8;
 	font-size: .75em;
 }
@@ -230,10 +234,4 @@ body, #navLinks a, .gray, .grey, .colorGray, .colorGrey
 #socials
 {
 	justify-content: center;
-}
-
-/*Testing styles*/
-.space{
-	height: 50vh;
-	width: 100vw;
 }
